objects/ssot__CoverageBenefit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitInformationText__c</fullName>
        <label>Benefit Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitNotes__c</fullName>
        <label>Benefit Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitPeriodEndDate__c</fullName>
        <label>Benefit Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitPeriodStartDate__c</fullName>
        <label>Benefit Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CoinsuranceNoteText__c</fullName>
        <label>Coinsurance Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CopayNoteText__c</fullName>
        <label>Copay Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoverageType__c</fullName>
        <label>Coverage Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeductibleNoteText__c</fullName>
        <label>Deductible Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclaimerText__c</fullName>
        <label>Disclaimer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmergencyTreatmentCopayAmount__c</fullName>
        <label>Emergency Treatment Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__INNIndividualDeductibleRemainingAmt__c</fullName>
        <label>INN Individual Deductible Remaining Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Coverage Benefit Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkCoinsuranceAmount__c</fullName>
        <label>In Network Coinsurance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkCoinsurancePercent__c</fullName>
        <label>In Network Coinsurance Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkFamilyDeductibleAmount__c</fullName>
        <label>In Network Family Deductible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkFamilyOOPRemainingAmount__c</fullName>
        <label>In Network Family OOP Remaining Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkFamilyOutofPocketAmount__c</fullName>
        <label>In Network Family Outof Pocket Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkIndividualDeductibleAmount__c</fullName>
        <label>In Network Individual Deductible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkIndividualOutofPocketAmt__c</fullName>
        <label>In Network Individual Outof Pocket Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNetworkIndividualOutofPocketLimitAmt__c</fullName>
        <label>In Ntwk Individual Outof Pocket Lmt Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkFamilyDeductibleLimitAmt__c</fullName>
        <label>In Ntwk Family Deductible Limit Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkFamilyDeductibleRemainingAmt__c</fullName>
        <label>In Ntwk Family Deductible Remaining Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkFamilyOutofPocketLimitAmt__c</fullName>
        <label>In Ntwk Family Outof Pocket Limit Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkIndividualDeductibleLimitAmt__c</fullName>
        <label>In Ntwk Individual Deductible Limit Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkIndividualOutofPocketRemainingAmt__c</fullName>
        <label>In Ntwk Individual OOP Remaining Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InNtwkLifetimeCoverageMaximumAmt__c</fullName>
        <label>In Ntwk Lifetime Coverage Maximum Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LifetimeMaximumPaymentNoteText__c</fullName>
        <label>Lifetime Maximum Payment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberId__c</fullName>
        <label>Member</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberPlanId__c</fullName>
        <label>Member Plan</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkCoinsuranceAmount__c</fullName>
        <label>Outof Network Coinsurance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkCoinsurancePercent__c</fullName>
        <label>Outof Network Coinsurance Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkFamilyDeductibleAmount__c</fullName>
        <label>Outof Network Family Deductible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNetworkFamilyOutofPocketAmount__c</fullName>
        <label>Outof Network Family Outof Pocket Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkFamilyDeductibleLimitAmt__c</fullName>
        <label>Outof Ntwk Family Deductible Limit Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkFamilyDeductibleRemainingAmt__c</fullName>
        <label>Outof Ntwk Family Ded Remaining Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkFamilyOutofPocketLmtAmt__c</fullName>
        <label>Outof Ntwk Family Outof Pocket Lmt Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkFamilyOutofPocketRemainingAmt__c</fullName>
        <label>Outof Ntwk Family Outof Pocket Rmn Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndividualDedRemainingAmt__c</fullName>
        <label>Outof Ntwk Individual Ded Remaining Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndividualDeductibleAmt__c</fullName>
        <label>Outof Ntwk Individual Deductible Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndividualDeductibleLimitAmt__c</fullName>
        <label>Outof Ntwk Individual Deductible Lmt Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndividualOutofPocketAmt__c</fullName>
        <label>Outof Ntwk Individual Outof Pocket Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndvOutofPocketLmtAmt__c</fullName>
        <label>Outof Ntwk Indv Outof Pocket Lmt Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkIndvOutofPocketRemainAmt__c</fullName>
        <label>Outof Ntwk Indv Outof Pocket Remain Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofNtwkLifetimeCoverageMaximumAmt__c</fullName>
        <label>Outof Ntwk Lifetime Coverage Maximum Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutofPocketPaymentNoteText__c</fullName>
        <label>Outof Pocket Payment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryCareCopayAmount__c</fullName>
        <label>Primary Care Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDate__c</fullName>
        <label>Source System Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpecialistConsultationCopayAmount__c</fullName>
        <label>Specialist Consultation Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UrgentCareCopayAmount__c</fullName>
        <label>Urgent Care Copay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationDate__c</fullName>
        <label>Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726055485_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefit_MemberId_map_Account_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CoverageBenefit_MemberId_map_Account_rel</relationshipLabel>
        <relationshipName>rel_1716726055485_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726059344_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefit_MemberPlanId_map_Mem_rel</label>
        <referenceTo>ssot__MemberPlan__dlm</referenceTo>
        <relationshipLabel>CoverageBenefit_MemberPlanId_map_Mem_rel</relationshipLabel>
        <relationshipName>rel_1716726059344_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>